RESOLVED FIXED223663
Address undefined behavior found by UBSan in DateMath.h
https://bugs.webkit.org/show_bug.cgi?id=223663
Summary Address undefined behavior found by UBSan in DateMath.h
Chris Dumez
Reported 2021-03-23 17:00:38 PDT
Address undefined behavior found in UBSan in DateMath.h: Release/usr/local/include/wtf/DateMath.h:247:39: runtime error: nan is outside the range of representable values of type 'int' Release/usr/local/include/wtf/DateMath.h:221:29: runtime error: nan is outside the range of representable values of type 'int' Release/usr/local/include/wtf/DateMath.h:165:38: runtime error: signed integer overflow: -2147483648 - 1 cannot be represented in type 'int'
Attachments
Patch (3.20 KB, patch)
2021-03-23 17:04 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-03-23 17:04:11 PDT
EWS
Comment 2 2021-03-24 10:31:32 PDT
Committed r274946: <https://commits.webkit.org/r274946> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424078 [details].
Radar WebKit Bug Importer
Comment 3 2021-03-24 10:32:17 PDT
Note You need to log in before you can comment on or make changes to this bug.